# nw-crop-yield-change

./: .README.md.swp  .flake8  README.md  pyproject.toml
config/: config.yaml
notebooks/: 2_Reference file peculiarities.ipynb  Country shapefile debugging.ipynb
reports/: fraction_of_countries_metrics.csv  model_evaluation_metrics.csv
results/: output_150Tg_crops_and_grasses_1.csv  output_150Tg_crops_irrigated_1.csv  output_16Tg_crops_and_grasses_1.csv  output_16Tg_crops_and_grasses_rainfed_1.csv  output_16Tg_crops_irrigated_1.csv  output_27Tg_crops_and_grasses_1.csv  output_27Tg_crops_irrigated_1.csv  output_37Tg_crops_and_grasses_1.csv  output_47Tg_crops_and_grasses_1.csv  output_47Tg_crops_irrigated_1.csv  output_5Tg_crops_and_grasses_1.csv  output_5Tg_crops_and_grasses_2.csv  output_5Tg_crops_and_grasses_3.csv  output_5Tg_crops_and_grasses_aggregated.csv  output_5Tg_crops_and_grasses_rainfed_1.csv  output_5Tg_crops_and_grasses_rainfed_2.csv  output_5Tg_crops_irrigated_2.csv  output_5Tg_crops_irrigated_aggregated.csv
scripts/: 1_Country shapefile debugging.ipynb  3_Geospatial merging calculations.ipynb
src/: 1_yield_change_calculation.py  1_yield_change_calculation_downscaled.py  2_model_evaluation.py  2_total_yield_change_calculation.py  yield_change_calculation.py
temp/: output_150Tg_crops_and_grasses_1.csv  output_16Tg_crops_and_grasses_1.csv  output_37Tg_crops_and_grasses_1.csv  output_47Tg_crops_and_grasses_1.csv  output_5Tg_crops_and_grasses_2.csv  output_5Tg_crops_and_grasses_3.csv  output_5Tg_crops_and_grasses_aggregated.csv
(+55 files in other folders)
